--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,1 +1,106 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <a href="#" class="logo">
+      <img src="/assets/images/logo-green.png" alt="Logo">
+    </a>
+    <div class="footer-block footer-menu">
+      <div class="footer-head">
+        МЕНЮ
+      </div>
+      <div class="footer-items">
+        <nav>
+          <ul>
+            <li>
+              <a>Главная</a>
+            </li>
+            <li>
+              <a>Каталог</a>
+            </li>
+            <li>
+              <a>Доставка и оплата</a>
+            </li>
+            <li>
+              <a>Новости</a>
+            </li>
+            <li>
+              <a>Отзывы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="footer-block footer-categories">
+      <div class="footer-head">
+        КАТЕГОРИИ
+      </div>
+      <div class="footer-items">
+        <nav>
+          <ul>
+            <li *ngFor="let category of categories">
+              <a href="">{{ category.name }}</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="footer-block footer-info">
+      <div class="footer-head">
+        МЫ В СОЦИАЛЬНЫХ СЕТЯХ
+      </div>
+      <div class="footer-social">
+        <a href="#">
+          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3.81152 0.749756C2.12988 0.749756 0.75 2.12964 0.75 3.81128V14.1882C0.75 15.8699 2.12988 17.2498 3.81152 17.2498H14.1885C15.8701 17.2498 17.25 15.8699 17.25 14.1882V3.81128C17.25 2.12964 15.8701 0.749756 14.1885 0.749756H3.81152ZM3.81152 2.24976H14.1885C15.0586 2.24976 15.75 2.94116 15.75 3.81128V14.1882C15.75 15.0583 15.0586 15.7498 14.1885 15.7498H3.81152C2.94141 15.7498 2.25 15.0583 2.25 14.1882V3.81128C2.25 2.94116 2.94141 2.24976 3.81152 2.24976ZM8.78906 6.17261C8.23828 6.16675 7.76953 6.17261 7.50586 6.30151C7.33008 6.38647 7.19531 6.57983 7.27734 6.58862C7.37988 6.60327 7.61133 6.65308 7.73437 6.82007C7.89258 7.03394 7.88672 7.51733 7.88672 7.51733C7.88672 7.51733 7.97461 8.84741 7.67285 9.0144C7.46484 9.12866 7.18066 8.89722 6.56543 7.8396C6.25195 7.29468 6.01465 6.69409 6.01465 6.69409C6.01465 6.69409 5.9707 6.58276 5.88867 6.52417C5.78906 6.45093 5.65137 6.42749 5.65137 6.42749L4.18359 6.43628C4.18359 6.43628 3.96387 6.44507 3.88477 6.53882C3.81152 6.62671 3.87891 6.79956 3.87891 6.79956C3.87891 6.79956 5.02734 9.48608 6.32812 10.8396C7.52051 12.0818 8.87402 11.9998 8.87402 11.9998H9.48926C9.48926 11.9998 9.67383 11.9792 9.76758 11.8796C9.85547 11.7859 9.85254 11.6101 9.85254 11.6101C9.85254 11.6101 9.84082 10.7869 10.2217 10.6638C10.5996 10.5466 11.0801 11.4607 11.5928 11.8123C11.9824 12.0789 12.2783 12.0203 12.2783 12.0203L13.6494 11.9998C13.6494 11.9998 14.3643 11.9558 14.0244 11.3904C13.998 11.3464 13.8281 10.9744 13.0078 10.2126C12.1465 9.41577 12.2607 9.54468 13.2979 8.16479C13.9277 7.32397 14.1797 6.81128 14.1006 6.58862C14.0244 6.38062 13.5615 6.43628 13.5615 6.43628L12.0176 6.44507C12.0176 6.44507 11.9033 6.43042 11.8184 6.48022C11.7363 6.53003 11.6836 6.64722 11.6836 6.64722C11.6836 6.64722 11.4375 7.29761 11.1123 7.85132C10.4268 9.01733 10.1484 9.08179 10.0371 9.00854C9.77637 8.83862 9.84082 8.32886 9.84082 7.96851C9.84082 6.83472 10.0137 6.36597 9.50683 6.24292C9.33984 6.2019 9.2168 6.17554 8.78906 6.17261Z" fill="#2C2C2C"/>
+          </svg>
+        </a>
+        <a href="#">
+          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M9 0.000244141C4.03832 0.000244141 0 4.03856 0 9.00024C0 13.9619 4.03832 18.0002 9 18.0002C13.9617 18.0002 18 13.9619 18 9.00024C18 4.03856 13.9617 0.000244141 9 0.000244141ZM9 1.50024C13.151 1.50024 16.5 4.84923 16.5 9.00024C16.5 12.7708 13.7338 15.8712 10.1162 16.4094V11.1873H12.252L12.5874 9.01782H10.1162V7.83276C10.1162 6.93201 10.4121 6.13208 11.2544 6.13208H12.6079V4.2395C12.3702 4.20725 11.867 4.13696 10.916 4.13696C8.93002 4.13696 7.7666 5.18545 7.7666 7.57495V9.01782H5.72461V11.1873H7.7666V16.3904C4.20664 15.8032 1.5 12.73 1.5 9.00024C1.5 4.84923 4.84898 1.50024 9 1.50024Z" fill="#2C2C2C"/>
+          </svg>
+        </a>
+        <a href="#">
+          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M5.60156 0.749756C2.93848 0.749756 0.75 2.9353 0.75 5.60132V12.3982C0.75 15.0613 2.93555 17.2498 5.60156 17.2498H12.3984C15.0615 17.2498 17.25 15.0642 17.25 12.3982V5.60132C17.25 2.93823 15.0645 0.749756 12.3984 0.749756H5.60156ZM5.60156 2.24976H12.3984C14.2529 2.24976 15.75 3.74683 15.75 5.60132V12.3982C15.75 14.2527 14.2529 15.7498 12.3984 15.7498H5.60156C3.74707 15.7498 2.25 14.2527 2.25 12.3982V5.60132C2.25 3.74683 3.74707 2.24976 5.60156 2.24976ZM13.4297 3.89038C13.0518 3.89038 12.75 4.19214 12.75 4.57007C12.75 4.948 13.0518 5.24976 13.4297 5.24976C13.8076 5.24976 14.1094 4.948 14.1094 4.57007C14.1094 4.19214 13.8076 3.89038 13.4297 3.89038ZM9 4.49976C6.52441 4.49976 4.5 6.52417 4.5 8.99975C4.5 11.4753 6.52441 13.4998 9 13.4998C11.4756 13.4998 13.5 11.4753 13.5 8.99975C13.5 6.52417 11.4756 4.49976 9 4.49976ZM9 5.99976C10.667 5.99976 12 7.33276 12 8.99975C12 10.6667 10.667 11.9998 9 11.9998C7.33301 11.9998 6 10.6667 6 8.99975C6 7.33276 7.33301 5.99976 9 5.99976Z" fill="#2C2C2C"/>
+          </svg>
+        </a>
+      </div>
+      <div class="footer-payment">
+        <div class="payment-item" style="background-image: url('/assets/images/payment/1.png')">&nbsp;</div>
+        <div class="payment-item" style="background-image: url('/assets/images/payment/2.png')">&nbsp;</div>
+        <div class="payment-item" style="background-image: url('/assets/images/payment/3.png')">&nbsp;</div>
+        <div class="payment-item" style="background-image: url('/assets/images/payment/4.png')">&nbsp;</div>
+        <div class="payment-item" style="background-image: url('/assets/images/payment/5.png')">&nbsp;</div>
+        <div class="payment-item" style="background-image: url('/assets/images/payment/6.png')">&nbsp;</div>
+      </div>
+    </div>
+    <div class="footer-block footer-contacts">
+      <div class="footer-head">
+        КОНТАКТЫ
+      </div>
+      <div class="footer-contact">
+        <div class="footer-contact-head">
+          Адрес
+        </div>
+        <div class="footer-contact-info">
+          г. Минск,  ул. Калиновского 61, подъезд 1, офис 6
+        </div>
+      </div>
+      <div class="footer-contact">
+        <div class="footer-contact-head">
+          Телефон
+        </div>
+        <div class="footer-contact-info">
+          + 375 (29) 922-29-99
+        </div>
+      </div>
+      <div class="footer-contact">
+        <div class="footer-contact-head">
+          E-mail
+        </div>
+        <div class="footer-contact-info">
+          homedecor@gmail.com
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
