Login and Signup components realized. Login functional realized

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -9,3 +9,9 @@
     font-family: "Montserrat";
     font-weight: 400;
 }
+
+@font-face {
+    src: url("../fonts/Lora-Regular.woff");
+    font-family: "Lora";
+    font-weight: 400;
+}
