Signup functional realized

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -41,10 +41,10 @@
           </a>
           <mat-menu #menu="matMenu">
             <button mat-menu-item>
-              <a routerLink="/profole">Профиль</a>
+              <a routerLink="/profile">Профиль</a>
             </button>
             <button mat-menu-item>
-              <a routerLink="/logout" (click)="logout()">Выйти</a>
+              <a (click)="logout()">Выйти</a>
             </button>
           </mat-menu>
           <a href="#">
