--- a/src/app/views/user/signup/signup.component.html
+++ b/src/app/views/user/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section class="signup">
+<section class="signup" [formGroup]="signupForm" passwordRepeat>
   <div class="container">
     <div class="auth-form">
       <div class="auth-title">
@@ -6,16 +6,25 @@
       </div>
       <div class="auth-inputs">
         <div class="auth-input">
-          <input type="text" placeholder="Электронная почта">
+          <input type="text"
+                 [ngStyle]="{'border-color': signupForm.get('email')?.invalid
+                 && ( signupForm.get('email')?.dirty ||  signupForm.get('email')?.touched) ? 'red' : ''}"
+                 placeholder="Электронная почта" formControlName="email">
         </div>
         <div class="auth-input">
-          <input type="password" placeholder="Пароль">
+          <input type="password"
+                 [ngStyle]="{'border-color': signupForm.get('password')?.invalid
+                 && ( signupForm.get('password')?.dirty ||  signupForm.get('password')?.touched) ? 'red' : ''}"
+                 placeholder="Пароль" formControlName="password">
         </div>
         <div class="auth-input">
-          <input type="password" placeholder="Повторите пароль">
+          <input type="password"
+                 [ngStyle]="{'border-color': signupForm.get('passwordRepeat')?.invalid
+                 && ( signupForm.get('passwordRepeat')?.dirty ||  signupForm.get('passwordRepeat')?.touched) ? 'red' : ''}"
+                 placeholder="Повторите пароль" formControlName="passwordRepeat">
         </div>
         <div class="auth-checkbox">
-          <input type="checkbox" id="agree">
+          <input type="checkbox" id="agree" formControlName="agree">
           <label for="agree">
             Я принимаю
             <a href="#">условия пользовательского соглашения</a> и
@@ -24,7 +33,7 @@
         </div>
       </div>
       <div class="auth-buttons">
-        <button class="button">Зарегистрироваться</button>
+        <button class="button" [disabled]="signupForm.invalid" (click)="signup()">Зарегистрироваться</button>
       </div>
       <div class="auth-link">
         Уже есть аккаунт? <a routerLink="/login">Войдите</a>
@@ -34,3 +43,4 @@
       <img src="/assets/images/page/signup.png" alt="flower">
     </div>
   </div>
+</section>
