--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -9,7 +9,7 @@
           <nav>
             <ul>
               <li>
-                <a>Главная</a>
+                <a routerLink="/">Главная</a>
               </li>
               <li>
                 <a>Каталог</a>
