--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -11,7 +11,7 @@
         <nav>
           <ul>
             <li>
-              <a>Главная</a>
+              <a routerLink="/">Главная</a>
             </li>
             <li>
               <a>Каталог</a>
