--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/styles/variables";
+@import "../../../assets/styles/mixins";
 
 .main {
   background-image: url("../../../assets/images/page/main.png");
@@ -61,10 +62,12 @@
           color: $green-text-color;
         }
       }
+
       &.offer-insta {
         .offer-image {
           margin-top: 35px;
         }
+
         .offer-text {
           margin-top: 16px;
           max-width: 234px;
@@ -74,22 +77,27 @@
         .offer-button {
           margin-left: 168px;
           margin-top: 22px;
+
           .button {
             width: 228px;
           }
         }
       }
+
       &.offer-collection {
         .offer-title {
           max-width: 362px;
         }
+
         .offer-image {
           margin-top: 12px;
           margin-left: 81px;
         }
+
         .offer-button {
           margin-left: 44px;
           margin-top: 75px;
+
           .button {
             width: 177px;
           }
@@ -97,4 +105,158 @@
       }
     }
   }
+}
+
+.best-products {
+  margin-top: 120px;
+  margin-bottom: 130px;
+
+  .carousel-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+
+    .carousel-title {
+      @include head-lora-32;
+    }
+
+    .carousel-arrows {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        cursor: pointer;
+
+        &:first-child {
+          margin-right: 30px;
+        }
+      }
+    }
+  }
+}
+
+.info {
+  background-color: #A4CBA3;
+  background-image: url("../../../assets/images/page/info-bg.png");
+  background-repeat: no-repeat;
+  background-position-x: calc(50% + 340px);
+  padding: 80px 0;
+
+  .container {
+    .info-title {
+      @include head-lora-32;
+      margin-bottom: 5px;
+    }
+
+    .info-item {
+      margin-top: 30px;
+      color: #000000;
+      max-width: 442px;
+
+      .info-image {
+        margin-bottom: 30px;
+      }
+
+      .info-text {
+        font-size: 16px;
+
+        .info-text-extra {
+          font-family: Montserrat, sans-serif;
+          font-weight: 300;
+          font-style: italic;
+          line-height: 1.3;
+          margin-top: 8px;
+        }
+      }
+
+      &.info-delivery {
+        .info-text:last-child {
+          margin-top: 16px;
+        }
+      }
+
+      &.info-payment {
+        .info-text {
+          margin-top: 10px;
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+    }
+  }
+}
+
+.reviews {
+  margin-top: 130px;
+  margin-bottom: 130px;
+
+  .container {
+    .reviews-title {
+      @include head-lora-32;
+      text-align: center;
+      margin-bottom: 50px;
+    }
+
+    .reviews-carousel {
+      position: relative;
+
+      .review-item {
+        width: 396px;
+        height: 267px;
+        padding: 30px;
+        box-sizing: border-box;
+        border: 2px solid #2A592E;
+        border-radius: 10px;
+
+        .review-item-head {
+          display: flex;
+          align-items: center;
+
+          .review-item-image {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-position: center;
+            background-size: cover;
+            margin-right: 26px;
+          }
+
+          .review-item-name {
+            font-family: Montserrat, sans-serif;
+            font-weight: 600;
+            font-size: 16px;
+            color: $green-text-color;
+          }
+        }
+        .review-item-text {
+          margin-top: 15px;
+          color: $gray-text-color;
+          font-size: 16px;
+          line-height: 1.3;
+        }
+      }
+    }
+    .reviews-arrows {
+      display: flex;
+      a {
+        top: calc(50% - 5px);
+        display: flex;
+        position: absolute;
+        cursor: pointer;
+        &.move-backward {
+          left: -41px;
+        }
+        &.move-forward {
+          right: -41px;
+        }
+      }
+    }
+  }
+}
+
+.map iframe {
+  vertical-align: bottom;
 }
