--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -21,6 +21,21 @@ input {
   color: $gray-text-color;
 }
 
+.small-input {
+  box-sizing: border-box;
+  border: 1px solid #6CAC72;
+  border-radius: 5px;
+  text-align: center;
+  padding: 2px;
+  width: 40px;
+  height: 28px;
+
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  color: $green-text-color;
+}
+
 .button {
   text-align: center;
   padding: 15px;
