--- a/src/app/views/product/catalog/catalog.component.html
+++ b/src/app/views/product/catalog/catalog.component.html
@@ -40,10 +40,12 @@
     </div>
     <div class="catalog-layout">
       <div class="catalog-filters">
-        <category-filter [categoryWithTypes]="categoryWithTypes" *ngFor="let categoryWithTypes of categoriesWithTypes"></category-filter>
+        <category-filter [categoryWithTypes]="categoryWithTypes"
+                         *ngFor="let categoryWithTypes of categoriesWithTypes"></category-filter>
         <category-filter type="height"></category-filter>
         <category-filter type="diameter"></category-filter>
       </div>
+      <div class="catalog-not-found" *ngIf="products.length === 0">Товары не найдены, попробуйте изменить параметры поиска</div>
       <div class="catalog-products">
         <product-card *ngFor="let product of products" [product]="product"></product-card>
       </div>
