--- a/src/app/views/product/catalog/catalog.component.scss
+++ b/src/app/views/product/catalog/catalog.component.scss
@@ -117,7 +117,11 @@
         width: 257px;
         min-width: 257px;
         margin-right: 58px;
+      }
 
+      .catalog-not-found {
+        font-size: 20px;
+        font-weight: 500;
 
       }
       .catalog-products {
