Catalog component logic development is in progress. header and footer category link added.

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -37,7 +37,7 @@
         <nav>
           <ul>
             <li *ngFor="let category of categories">
-              <a href="">{{ category.name }}</a>
+              <a routerLink="/catalog" [queryParams]="{types: category?.typesUrl}">{{ category.name }}</a>
             </li>
           </ul>
         </nav>
