--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -70,7 +70,7 @@
           <nav>
             <ul>
               <li *ngFor="let category of categories">
-                <a href="">{{ category.name }}</a>
+                <a routerLink="/catalog" [queryParams]="{types: category?.typesUrl}">{{ category.name }}</a>
               </li>
             </ul>
           </nav>
