Detail component is in progress. Detail layout and styles completed.

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -8,3 +8,11 @@
   color: $green-text-color;
 }
 
+@mixin head-lora-36 {
+  font-family: 'Lora', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  color: #000000;
+}
+
