--- a/src/app/views/product/catalog/catalog.component.scss
+++ b/src/app/views/product/catalog/catalog.component.scss
@@ -1,4 +1,5 @@
 @import "../../../../assets/styles/variables";
+@import "../../../../assets/styles/mixins";
 
 .catalog {
   padding-top: 100px;
@@ -6,9 +7,7 @@
 
   .container {
     .catalog-title {
-      font-family: Lora, sans-serif;
-      font-weight: 400;
-      font-size: 36px;
+      @include head-lora-36;
       color: $green-text-color;
 
       margin-left: 317px;
@@ -171,6 +170,9 @@
             background: #B6D5B9;
           }
         }
+      }
+
+      .recommended-products {
       }
     }
   }
