Detail component completed.

--- a/src/app/views/product/detail/detail.component.html
+++ b/src/app/views/product/detail/detail.component.html
@@ -73,7 +73,7 @@
         <div class="detail-info-params">
           <div class="detail-info-params-count">
             <span>Количество: </span>
-            <div class="">...</div>
+            <count-selector [count]="count" (onCountChange)="updateCount($event)"></count-selector>
           </div>
           <div class="detail-info-params-price">
             {{ product.price }} BYN
@@ -86,7 +86,7 @@
             </svg>
             <span>В избранное</span>
           </button>
-          <button class="button">В корзину</button>
+          <button class="button" (click)="addToCart()">В корзину</button>
         </div>
       </div>
     </div>
