Cart component is in progress. Cart layout finished.

--- a/src/app/shared/components/product-card/product-card.component.scss
+++ b/src/app/shared/components/product-card/product-card.component.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   position: relative;
 
+  &.is-light {
+    cursor: pointer;
+    height: auto;
+  }
+
   .product-card-favorite {
     position: absolute;
     top: 12px;
