--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,5 +1,6 @@
-<div class="product-card" *ngIf="product">
-  <div class="product-card-favorite">
+<div class="product-card" *ngIf="product" [routerLink]="isLight ? ['/product/' + product.url] : []"
+     [class.is-light]="isLight">
+  <div class="product-card-favorite" *ngIf="!isLight">
     <span style="display: none">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
@@ -20,13 +21,13 @@
   </div>
   <div class="product-card-image" style="background-image: url({{serverStaticPath + product.image}})"></div>
   <div class="product-card-name">{{ product.name }}</div>
-  <div class="product-card-info">
+  <div class="product-card-info" *ngIf="!isLight">
     <div class="product-card-price">{{ product.price }} BYN</div>
     <div class="product-card-action">
       <button class="button">В корзину</button>
     </div>
   </div>
-  <div class="product-card-extra">
+  <div class="product-card-extra" *ngIf="!isLight">
     <count-selector></count-selector>
     <a [routerLink]="'/product/' + product.url" class="product-card-detail">
       <svg width="18" height="4" viewBox="0 0 18 4" fill="none" xmlns="http://www.w3.org/2000/svg">
