--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -24,11 +24,15 @@
   <div class="product-card-info" *ngIf="!isLight">
     <div class="product-card-price">{{ product.price }} BYN</div>
     <div class="product-card-action">
-      <button class="button">В корзину</button>
+      <button class="button" *ngIf="!countInCart" (click)="addToCart()">В корзину</button>
+      <button class="button button-transparent button-in-cart" *ngIf="countInCart" (click)="removeFromCart()">
+        <span>В корзине</span>
+        <span>Удалить</span>
+      </button>
     </div>
   </div>
   <div class="product-card-extra" *ngIf="!isLight">
-    <count-selector></count-selector>
+    <count-selector [count]="count" (onCountChange)="updateCount($event)"></count-selector>
     <a [routerLink]="'/product/' + product.url" class="product-card-detail">
       <svg width="18" height="4" viewBox="0 0 18 4" fill="none" xmlns="http://www.w3.org/2000/svg">
         <circle cx="2.66699" cy="2" r="2" fill="#9AA89B"/>
