--- a/src/app/views/personal/favorite/favorite.component.html
+++ b/src/app/views/personal/favorite/favorite.component.html
@@ -1,7 +1,11 @@
 <div class="favorite">
   <div class="container">
     <div class="favorite-title">Избранное</div>
-    <div class="favorite-products">
+    <div class="favorite-empty" *ngIf="!products || products.length === 0">
+      <div>В избранном нет товаров</div>
+      <button routerLink="/catalog" class="button">В каталог</button>
+    </div>
+    <div class="favorite-products" *ngIf="products &&  products.length > 0">
       <div class="favorite-product" *ngFor="let product of products">
         <div class="favorite-product-image" style="background-image: url({{ serverStaticPath + product.image }})"></div>
         <div class="favorite-product-name">{{ product.name }}</div>
