--- a/src/app/views/personal/favorite/favorite.component.scss
+++ b/src/app/views/personal/favorite/favorite.component.scss
@@ -13,6 +13,19 @@
       margin-bottom: 35px;
     }
 
+    .favorite-empty {
+      margin-top: 20px;
+      margin-bottom: 100px;
+      div {
+        font-size: 16px;
+      }
+
+      .button {
+        width: 255px;
+        margin-top: 10px;
+      }
+    }
+
     .favorite-products {
 
       .favorite-product {
