--- a/src/app/views/order/order/order.component.html
+++ b/src/app/views/order/order/order.component.html
@@ -2,34 +2,62 @@
   <div class="container">
     <div class="order-title">Оформление вашего заказа</div>
     <div class="order-info">
-      <div class="order-form">
+      <div class="order-form" [formGroup]="orderForm">
 
         <div class="order-form-block">
           <div class="order-form-label">Выберите способ доставки</div>
           <div class="order-form-types">
-            <div class="order-form-type-item active">Курьером</div>
-            <div class="order-form-type-item">Самовывоз</div>
+            <div class="order-form-type-item"
+                 (click)="changeDeliveryType(deliveryTypes.delivery)"
+                 [class.active]="deliveryType === deliveryTypes.delivery">Курьером</div>
+            <div class="order-form-type-item"
+                 (click)="changeDeliveryType(deliveryTypes.self)"
+                 [class.active]="deliveryType === deliveryTypes.self">Самовывоз</div>
           </div>
         </div>
 
         <div class="order-form-block">
           <div class="order-form-label">Заполните личные данные</div>
           <div class="order-form-inputs personal-data-inputs">
-            <input type="text" class="input" placeholder="Фамилия">
-            <input type="text" class="input" placeholder="Имя">
-            <input type="text" class="input" placeholder="Отчество">
-            <input type="text" class="input" placeholder="Телефон">
-            <input type="text" class="input" placeholder="E-mail">
+            <input type="text" class="input" placeholder="Фамилия"
+                   [ngStyle]="{'border-color': orderForm.get('lastName')?.invalid
+                   && (orderForm.get('lastName')?.dirty || orderForm.get('lastName')?.touched) ? 'red': ''}"
+                   formControlName="lastName">
+            <input type="text" class="input" placeholder="Имя"
+                   [ngStyle]="{'border-color': orderForm.get('firstName')?.invalid
+                   && (orderForm.get('firstName')?.dirty || orderForm.get('firstName')?.touched) ? 'red': ''}"
+                   formControlName="firstName">
+            <input type="text" class="input" placeholder="Отчество" formControlName="fatherName">
+            <input type="text" class="input" placeholder="Телефон"
+                   [ngStyle]="{'border-color': orderForm.get('phone')?.invalid
+                   && (orderForm.get('phone')?.dirty || orderForm.get('phone')?.touched) ? 'red': ''}"
+                   formControlName="phone">
+            <input type="text" class="input" placeholder="E-mail"
+                   [ngStyle]="{'border-color': orderForm.get('lastName')?.invalid
+                   && (orderForm.get('email')?.dirty || orderForm.get('email')?.touched) ? 'red': ''}"
+                   formControlName="email">
           </div>
         </div>
 
-        <div class="order-form-block">
+        <div class="order-form-block" *ngIf="deliveryType === deliveryTypes.delivery">
           <div class="order-form-label">Заполните адрес доставки</div>
           <div class="order-form-inputs address-inputs">
-            <input type="text" class="input street" placeholder="Улица">
-            <input type="text" class="input house" placeholder="№ дома">
-            <input type="text" class="input entrance" placeholder="Подъезд">
-            <input type="text" class="input apartment" placeholder="№ квартиры">
+            <input type="text" class="input street" placeholder="Улица"
+                   [ngStyle]="{'border-color': orderForm.get('street')?.invalid
+                   && (orderForm.get('street')?.dirty || orderForm.get('street')?.touched) ? 'red': ''}"
+                   formControlName="street">
+            <input type="text" class="input house" placeholder="№ дома"
+                   [ngStyle]="{'border-color': orderForm.get('house')?.invalid
+                   && (orderForm.get('house')?.dirty || orderForm.get('house')?.touched) ? 'red': ''}"
+                   formControlName="house">
+            <input type="text" class="input entrance" placeholder="Подъезд"
+                   [ngStyle]="{'border-color': orderForm.get('entrance')?.invalid
+                   && (orderForm.get('entrance')?.dirty || orderForm.get('entrance')?.touched) ? 'red': ''}"
+                   formControlName="entrance">
+            <input type="text" class="input apartment" placeholder="№ квартиры"
+                   [ngStyle]="{'border-color': orderForm.get('apartment')?.invalid
+                   && (orderForm.get('apartment')?.dirty || orderForm.get('apartment')?.touched) ? 'red': ''}"
+                   formControlName="apartment">
           </div>
         </div>
 
@@ -37,15 +65,18 @@
           <div class="order-form-label">Выберите способ оплаты</div>
           <div class="order-form-radio">
             <div class="order-form-radio-block">
-              <input type="radio" id="card" class="input">
+              <input type="radio" id="card" class="input" value="{{ paymentTypes.cardOnLine }}"
+                     formControlName="paymentType">
               <label for="card">Оплата банковской картой в интернет-магазине</label>
             </div>
             <div class="order-form-radio-block">
-              <input type="radio" id="cashless" class="input">
+              <input type="radio" id="cashless" class="input" value="{{ paymentTypes.cardToCourier }}"
+                     formControlName="paymentType">
               <label for="cashless">Безналичный расчет при получении</label>
             </div>
             <div class="order-form-radio-block">
-              <input type="radio" id="cash" class="input">
+              <input type="radio" id="cash" class="input" value="{{ paymentTypes.cashToCourier }}"
+                     formControlName="paymentType">
               <label for="cash">Наличный расчет при получении</label>
             </div>
           </div>
@@ -54,7 +85,11 @@
         <div class="order-form-block">
           <div class="order-form-label">Комментарий к заказу (необязательно)</div>
           <div class="order-form-inputs">
-            <textarea cols="30" rows="5" placeholder="Оставьте свой комментарий..." class="input"></textarea>
+            <textarea cols="30" rows="5"
+                      [ngStyle]="{'border-color': orderForm.get('comment')?.invalid
+                      && (orderForm.get('comment')?.dirty || orderForm.get('comment')?.touched) ? 'red': ''}"
+                      formControlName="comment"
+                      placeholder="Оставьте свой комментарий..." class="input"></textarea>
           </div>
         </div>
 
@@ -65,22 +100,22 @@
           <div class="order-details-info-title">Ваш заказ</div>
           <div class="order-details-info-item">
             <div class="order-details-info-item-text">Товаров:</div>
-            <div class="order-details-info-item-data">{{ 4 }}</div>
+            <div class="order-details-info-item-data">{{ totalCount }}</div>
           </div>
           <div class="order-details-info-item">
             <div class="order-details-info-item-text">Общая стоимость:</div>
-            <div class="order-details-info-item-data">{{ 147 }} BYN</div>
+            <div class="order-details-info-item-data">{{ totalAmount }} BYN</div>
           </div>
           <div class="order-details-info-item">
             <div class="order-details-info-item-text">Стоимость доставки:</div>
-            <div class="order-details-info-item-data">{{ 10 }} BYN</div>
+            <div class="order-details-info-item-data">{{ delivery }} BYN</div>
           </div>
           <div class="order-details-info-item">
             <div class="order-details-info-item-text">Итоговая стоимость:</div>
-            <div class="order-details-info-item-data">{{ 157 }} BYN</div>
+            <div class="order-details-info-item-data">{{ delivery + totalAmount }} BYN</div>
           </div>
         </div>
-        <button class="button">Подтвердить заказ</button>
+        <button class="button" (click)="createOrder()">Подтвердить заказ</button>
       </div>
     </div>
 
