Order popup realized.

--- a/src/app/views/order/order/order.component.scss
+++ b/src/app/views/order/order/order.component.scss
@@ -171,3 +171,31 @@
     }
   }
 }
+
+.order-popup {
+  padding: 100px 70px 220px;
+  position: relative;
+  text-align: center;
+  color: $green-text-color;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-image: url("../../../../assets/images/page/order-image.png");
+
+  .order-popup-close {
+    position: absolute;
+    cursor: pointer;
+    top: 30px;
+    right: 30px;
+  }
+
+  .order-popup-title {
+    @include head-lora-32;
+    margin-bottom: 40px;
+  }
+
+  .order-popup-content div {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
+
