Info component finished.

--- a/src/app/views/order/order/order.component.html
+++ b/src/app/views/order/order/order.component.html
@@ -35,7 +35,7 @@
                    && (orderForm.get('phone')?.dirty || orderForm.get('phone')?.touched) ? 'red': ''}"
                    formControlName="phone">
             <input type="text" class="input" placeholder="E-mail"
-                   [ngStyle]="{'border-color': orderForm.get('lastName')?.invalid
+                   [ngStyle]="{'border-color': orderForm.get('email')?.invalid
                    && (orderForm.get('email')?.dirty || orderForm.get('email')?.touched) ? 'red': ''}"
                    formControlName="email">
           </div>
