Orders component finished.

--- a/src/app/views/personal/orders/orders.component.html
+++ b/src/app/views/personal/orders/orders.component.html
@@ -23,7 +23,10 @@
             </tr>
           </table>
         </div>
-        <div class="orders-list-item-status">{{order.status}}</div>
+        <div class="orders-list-item-status"
+             style="border-color: {{ order.color}}; color: {{ order.color}}">
+          {{ order.statusRus }}
+        </div>
         <div class="orders-list-item-price">{{order.totalAmount}} BYN</div>
       </div>
     </div>
