--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -142,6 +142,55 @@ header.header {
           left: 15px;
           top: 11px;
         }
+
+        .search-products {
+          position: absolute;
+          right: 0;
+          top: 61px;
+          width: 400px;
+          background-color: #FFFFFF;
+          border-radius: 5px;
+          border: 1px solid #EBEBEB;
+
+          .search-product {
+            padding: 12px 23px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            .search-product-image {
+              border-radius: 5px;
+              width: 40px;
+              height: 40px;
+              background-size: cover;
+              background-position: center;
+              margin-right: 25px;
+            }
+
+            .search-product-name {
+              color: #8E8E8E;
+              font-size: 16px;
+              line-height: 1.3;
+            }
+
+            &:first-child {
+              border-top-right-radius: 5px;
+              border-top-left-radius: 5px;
+            }
+
+            &:last-child {
+              border-bottom-left-radius: 5px;
+              border-bottom-right-radius: 5px;
+            }
+
+            &:hover {
+              background-color: #EBEBEB;
+              .search-product-name {
+                color: black;
+              }
+            }
+          }
+        }
       }
     }
   }
