--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -192,3 +192,7 @@ a.button {
 .mat-dialog-container {
   padding: 0!important;
 }
+
+.mat-progress-spinner circle, .mat-spinner circle {
+  stroke: #648F64;
+}
