Part 1 of test task completed.

--- a/src/app/views/personal/favorite/favorite.component.html
+++ b/src/app/views/personal/favorite/favorite.component.html
@@ -7,11 +7,22 @@
     </div>
     <div class="favorite-products" *ngIf="products &&  products.length > 0">
       <div class="favorite-product" *ngFor="let product of products">
-        <div class="favorite-product-image" style="background-image: url({{ serverStaticPath + product.image }})"></div>
-        <div class="favorite-product-name">{{ product.name }}</div>
+        <div class="favorite-product-image"
+             routerLink="/product/{{ product.url }}"
+             style="background-image: url({{ serverStaticPath + product.image }})"></div>
+        <div class="favorite-product-name" routerLink="/product/{{ product.url }}">{{ product.name }}</div>
         <div class="favorite-product-price">{{ product.price }} BYN</div>
         <div class="favorite-product-action">
-          <button class="button" routerLink="/product/{{ product.url }}">Открыть</button>
+          <count-selector *ngIf="product.countInCart"
+                          [count]="product.countInCart"
+                          (onCountChange)="updateCount(product.id, $event)"></count-selector>
+          <button class="button" *ngIf="!product.countInCart" (click)="addToCart(product.id)">В корзину</button>
+          <button class="button button-transparent button-in-cart"
+                  *ngIf="product.countInCart"
+                  (click)="removeFromCart(product.id)">
+            <span>В корзине</span>
+            <span>Удалить</span>
+          </button>
         </div>
         <div class="favorite-product-remove" (click)="removeFromFavorites(product.id)">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
