--- a/src/app/views/product/catalog/catalog.component.html
+++ b/src/app/views/product/catalog/catalog.component.html
@@ -53,7 +53,7 @@
 
     <div class="pagination" *ngIf="pages.length > 1">
       <div class="pagination-arrow" (click)="openPrevPage()"
-           [class.disabled]="activeParams.page ? activeParams.page == 1 : true">
+           [class.disabled]="activeParams.page ? activeParams.page === 1 : true">
         <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M9.56988 5.98092C9.75988 5.98092 9.94988 6.04973 10.0999 6.19717C10.3899 6.48223 10.3899 6.95405 10.0999 7.2391L4.55988 12.6847L10.0999 18.1303C10.3899 18.4153 10.3899 18.8871 10.0999 19.1722C9.80988 19.4573 9.32988 19.4573 9.03988 19.1722L2.96988 13.2056C2.67988 12.9206 2.67988 12.4488 2.96988 12.1637L9.03988 6.19717C9.18988 6.04973 9.37988 5.98092 9.56988 5.98092Z"
@@ -69,7 +69,7 @@
            *ngFor="let page of pages">{{ page }}</a>
       </div>
       <div class="pagination-arrow" (click)="openNextPage()"
-           [class.disabled]="activeParams.page ? activeParams.page == pages.length : false">
+           [class.disabled]="activeParams.page ? activeParams.page === pages.length : false">
         <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M14.4301 19.3885C14.2401 19.3885 14.0501 19.3197 13.9001 19.1722C13.6101 18.8872 13.6101 18.4153 13.9001 18.1303L19.4401 12.6847L13.9001 7.23913C13.6101 6.95407 13.6101 6.48225 13.9001 6.19719C14.1901 5.91213 14.6701 5.91213 14.9601 6.19719L21.0301 12.1637C21.3201 12.4488 21.3201 12.9206 21.0301 13.2057L14.9601 19.1722C14.8101 19.3197 14.6201 19.3885 14.4301 19.3885Z"
