--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   font-family: Montserrat, sans-serif;
   font-weight: 400;
+  scroll-behavior: smooth;
 }
 
 .container {
